--- a/client/index.html
+++ b/client/index.html
@@ -10,13 +10,7 @@
 <body onload="init()">
 <h1>SsdWebApi Indici client</h1>
 <div>
-<textarea id="txtarea" rows="8" cols="50"> </textarea>
-</div>
-<div>
-<input type="button" value="Read all" onclick="findAll();" />
-<input type="button" value="Read by id" onclick="findById();" />
-</div>
-<div>IdSerie: <input type="number" id="txtId" size="10">
+<input type="button" value="Start Python" onclick="start();" />
 </div>
 </body>
 </html>
